--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^1.12.1",
     "convex": "0.9.1",
     "next": "latest",
+    "node-fetch": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
