--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "start": "next start"
   },
   "dependencies": {
-    "@auth0/auth0-react": "^1.12.1",
-    "convex": "0.9.1",
+    "@auth0/auth0-react": "^2.0.1",
+    "convex": "^0.11.0",
     "next": "latest",
     "node-fetch": "^3.3.0",
     "react": "^18.2.0",
