--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # Production environment variables go here
 
-NEXT_PUBLIC_CONVEX_URL="https://famous-deer-622.convex.cloud"
+NEXT_PUBLIC_CONVEX_URL="https://fleet-raccoon-653.convex.cloud"
